2008-10-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Fix virtual struct properties

2008-10-23  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* vapi/sdl.vapi: Fix SysWMEvent link issue.

2008-10-23  Jürg Billeter  <j@bitron.ch>

	* vapi/gobject-2.0.vapi:

	Fix runtime error when using GValue with D-Bus

2008-10-23  Jürg Billeter  <j@bitron.ch>

	* vapi/gobject-2.0.vapi:

	Support passing GValues as variants over D-Bus

2008-10-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Fix foreach over stacked arrays

2008-10-22  Andrea Del Signore  <sejerpz@tin.it>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_text_buffer_new binding

	* vapi/gtk+-2.0.vapi: regenerated

2008-10-22  Jürg Billeter  <j@bitron.ch>

	* vala/valaintegertype.vala:
	* vala/valasemanticanalyzer.vala:

	Fix leaked reference cycle

2008-10-22  Jürg Billeter  <j@bitron.ch>

	* vala/valasignal.vala:

	Always mangle signal name from camel case to lower case

2008-10-22  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:
	* vapi/gobject-2.0.vapi:
	* vapi/Makefile.am:

	Move gobject-2.0 bindings to separate VAPI file

	* compiler/valacompiler.vala:
	* vapigen/valavapigen.vala:

	Include gobject-2.0 by default

	* gee/Makefile.am:
	* ccode/Makefile.am:
	* vala/Makefile.am:
	* gobject/Makefile.am:
	* compiler/Makefile.am:

	Support building libvala and valac with older Vala versions

2008-10-22  Jürg Billeter  <j@bitron.ch>

	* ChangeLog.pre-0-4:
	* Makefile.am:

	Rotate ChangeLog